--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "theme",
-  "version": "1.0.0",
+  "name": "vuepress-theme-pluto",
+  "version": "1.0.2",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "@vuepress/plugin-back-to-top": "^1.8.2",
     "@xiaopanda/vuepress-plugin-code-copy": "^1.0.3",
+    "@leecervan/markdown-it-katex": "1.0.0",
     "animate.css": "^4.1.1",
-    "markdown-it-katex": "^2.0.3",
-    "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0",
+    "async-validator": "^4.0.3",
     "valine": "^1.4.14",
     "vue-click-outside": "^1.1.0",
     "vuepress-plugin-element-tabs": "^0.2.8",
