--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.1.3",
   "main": "index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:leecervan/vuepress-theme-pluto.git"
+  },
   "dependencies": {
     "@leecervan/markdown-it-katex": "1.0.0",
     "@vuepress/plugin-back-to-top": "^1.8.2",
